@@ -155,7 +155,7 @@ class DisqualificationsServiceImplTest {
         List<Disqualifications> result = service.getDisqualifications(COMPANY_NUMBER);
 
         assertEquals(1, result.size());
-        assertEquals(ID, result.get(0).getId());
+        assertEquals(ID, result.getFirst().getId());
     }
 
     @Test
@@ -201,11 +201,36 @@ class DisqualificationsServiceImplTest {
         verify(repository, never()).delete(any());
 
         // Case 2: Optional contains empty list
-        when(repository.findByCompanyNumber(COMPANY_NUMBER)).thenReturn(Optional.of(Collections.emptyList()));
+        when(repository.findByCompanyNumber(COMPANY_NUMBER))
+                .thenReturn(Optional.of(Collections.emptyList()));
 
         boolean resultEmptyList = service.delete(COMPANY_NUMBER);
 
         assertFalse(resultEmptyList);
         verify(repository, never()).delete(any());
+    }
+
+    @Test
+    void createReturnsUnsavedDisqualificationWhenCombinedTdgIsTrue() throws DataException {
+        CompanySpec spec = new CompanySpec();
+        spec.setCompanyNumber(COMPANY_NUMBER);
+        spec.setCombinedTdg(true);
+        DisqualificationsSpec disqSpec = new DisqualificationsSpec();
+        disqSpec.setCorporateOfficer(false);
+        spec.setDisqualifiedOfficers(List.of(disqSpec));
+
+        when(randomService.getString(24)).thenReturn("D12345678");
+        when(randomService.getNumber(10)).thenReturn(1234567890L);
+        when(randomService.getEtag()).thenReturn("etag");
+        when(randomService.getString(10)).thenReturn("officerId");
+        when(randomService.getString(8)).thenReturn("officerRaw");
+        when(addressService.getCountryOfResidence(any())).thenReturn("England");
+        when(addressService.getAddress(any())).thenReturn(null);
+
+        Disqualifications result = service.create(spec);
+
+        assertNotNull(result);
+        assertEquals(COMPANY_NUMBER, result.getCompanyNumber());
+        verify(repository, never()).save(any());
     }
 }
